# python-sdk

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  Taskfile.yaml  pyproject.toml
scripts/: introspect_rt.py
src/flymodel/: __init__.py  __init__.pyi  config.py  context.py  experiment.py
src/flymodel/client/: __init__.py  client.pyi  models.py
src/flymodel/models/: __init__.py  __init__.pyi  common.py  create_bucket.py  create_bucket.pyi  create_experiment.py  create_experiment.pyi  create_model.py  create_model.pyi  create_model_version.py  create_model_version.pyi  create_namespace.py  create_namespace.pyi  delete_bucket.py  delete_bucket.pyi  delete_experiment.py  delete_experiment.pyi  delete_model.py  delete_model.pyi  delete_model_version.py  delete_model_version.pyi  delete_namespace.py  delete_namespace.pyi  enums.py  enums.pyi  query_buckets.py  query_buckets.pyi  query_experiment.py  query_experiment.pyi  query_models.py  query_models.pyi  query_namespaces.py  query_namespaces.pyi  types.pyi  update_model.py  update_model.pyi  update_model_version_state.py  update_model_version_state.pyi  update_namespace.py  update_namespace.pyi
tests/: __init__.py  __main__.py  fixture.py  profile.py  test_client_init.py  test_context_client.py  test_create_experiment.py  test_create_model.py  test_create_model_version.py  test_create_namespace.py  test_query_models.py  test_query_namespaces.py  test_reuse_runtime.py  test_run_experiment_upload_artifacts.py
