[build-system]
requires = ["maturin>=1.3,<2.0"]
build-backend = "maturin"

[project]
name = "flymodel"
requires-python = ">=3.8"
readme = "README.md"
license = "LICENSE.md"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]


[project.optional-dependencies]
dev = ["yappi", "polars", "pyarrow"]

[tool.maturin]
module-name = "client"
features = ["python"]
python-source = "src/flymodel"
manifest-path = "../flymodel/crates/client/Cargo.toml"


[tool.ruff.lint.per-file-ignores]
'**/__init__.{py,pyi}' = ["F401"]
'tests/**/*.py' = ["F401", "F811"]
